various
update sql
add opens time